--- a/styles/prtflo.css
+++ b/styles/prtflo.css
@@ -1,3 +1,9 @@
+.header{
+    background-image: url('../Assets/Hero-bg.png');
+    background-repeat: no-repeat;
+}
+
+
 
 .open-sans-normal {
   font-family: "Open Sans", sans-serif;
@@ -11,17 +17,34 @@
 
 /* shared style */
 .text-primary{
-    color: blue;
+    color: #4E47FF;
 }
 
 
+
+.btn-primary{
+   background-color: #4E47FF; 
+   font-weight: bold;
+   color: white;
+   font-size: 16;
+   padding: 18px 35px;
+   border-radius: 5px;
+   border: none;
+}
 
 /* nav styles */
 nav{
     display: flex;
-    
+    align-items: center;
+    justify-content: space-between;
+    margin: 50px 100px;
 }
 .nav-title{
     font-weight: 800;
     font-size: 45px;
+}
+
+
+div{
+    text-align: center;
 }
