--- a/styles/prtflo.css
+++ b/styles/prtflo.css
@@ -1,6 +1,7 @@
 .header{
     background-image: url('../Assets/Hero-bg.png');
     background-repeat: no-repeat;
+    
 }
 
 
@@ -47,4 +48,30 @@ nav{
 
 div{
     text-align: center;
+}
+
+
+/* banner style */
+
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 200px;
+}
+
+.banner-content{
+    max-width: 580px;
+    margin-top: 60px;
+}
+
+.banner-title{
+    font-width: 600;
+    font-size: 42px;
+
+}
+.banner-image-1{
+    width: 403px;
+    height: 328px;
+    border-radius: 10px;
+    margin-top: 50px;
 }
