--- a/styles/prtflo.css
+++ b/styles/prtflo.css
@@ -75,3 +75,44 @@ div{
     border-radius: 10px;
     margin-top: 50px;
 }
+
+
+.produtcs{
+    margin-top: 80px;
+    align-items: center;
+}
+
+
+
+.section-designer{
+
+}
+
+
+.section-title{
+    text-align: center;
+    width: 600;
+    font-size: 35px;
+}
+
+
+/* design container */
+.design-container{
+    display: flex
+    
+}
+
+
+/* design  */
+.design{
+    padding: 24px;
+    box-shadow: 0px 6px 50px 0 rgba(177, 168, 168, 0.521);
+    border-radius: 10px;
+    margin: 0 80px;
+    
+}
+
+
+.image-position{
+    position: ;
+}
